Make smoke test code more reusable